--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: page
-title: Hi! This is Murugesh.
-subtitle: This is where I will tell my friends way too much about me
+title: Hi! I'm Murugesh
+show-avatar: true
+subtitle: Data Scientist - bitsCrunch
+cover-img: '/assets/img/cover.jpg'
+use-site-title: true
+css: '/css/main.css'
 ---
-
