--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Hi! I'm Murugesh
+title: Hi! I'm Murugesh.
 show-avatar: true
-subtitle: Data Scientist - bitsCrunch
+subtitle: Data Scientist @ bitsCrunch
 cover-img: '/assets/img/cover.jpg'
 use-site-title: true
 css: '/css/main.css'
