--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Hi! I'm Murugesh.
 show-avatar: true
 subtitle: Data Scientist @ bitsCrunch
-cover-img: '/assets/img/cover.jpg'
+cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
 ---
