--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: வணக்கம்! | Bonjour! | Hello! I'm Murugesh.
 show-avatar: true
-subtitle:  < /b>Data Scientist @ bitsCrunch
+subtitle: Data Scientist @ bitsCrunch
 cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
