--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: வணக்கம்! | Bonjour! | Hello! I'm Murugesh.
+title: வணக்கம்! Bonjour! Hello! I'm Murugesh.
 show-avatar: true
 subtitle: Data Scientist @ bitsCrunch
 cover-img: '/assets/img/cover/home.jpg'
