--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@ cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
 ---
+
+<div class="boxed">
+  This text is enclosed in a box.
+</div> 
