--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: page
-title: வணக்கம்! Bonjour! Hello! I'm Murugesh.
+title: Hello! I'm Murugesh.
+subtitle: Don't believe me. Just watch!
 show-avatar: true
-subtitle: Data Scientist @ bitsCrunch
+subtitle: Data Scientist Intern @ bitsCrunch
 cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
