--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@ I am a self-motivated and self-taught continuous learner with proven leadership 
 <b>Don't believe me. Just watch!</b> 
 <br>
 <br>
-<p style="font-size:110px" style="color:red">Don't believe me. Just watch!</p>
+<p style="font-size:60px", style="color:red">Don't believe me. Just watch!</p>
