--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Hello! \nI'm Murugesh.
+title: Hello!     I'm Murugesh.
 subtitle: 
 show-avatar: true
 subtitle: Data Scientist Intern @ bitsCrunch
@@ -15,4 +15,4 @@ I am a self-motivated and self-taught continuous learner with proven leadership 
 <b>Don't believe me. Just watch!</b> 
 <br>
 <br>
-<p style="font-size:60px", style="color:red">Don't believe me. Just watch!</p>
+<p style="font-size:60px"; style="color:red"; text-align: "center">Don't believe me. Just watch!</p>
