--- a/index.html
+++ b/index.html
@@ -18,3 +18,12 @@ I am a self-motivated and self-taught continuous learner with proven leadership 
 <br>
 <br>
 <p style="font-size:60px"; style="color:red"; text-align: "center">Don't believe me. Just watch!</p>
+
+<html>
+<body style="background-color:powderblue;">
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
