--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ I am a self-motivated and self-taught continuous learner with proven leadership 
 <b>Don't believe me. Just watch!</b> 
 <br>
 <br>
-<p style="font-size:60px"; style="color:red"; text-align: "center">Don't believe me. Just watch!</p>
+<p style="font-size:60px; color:red; text-align: center">Don't believe me. Just watch!</p>
 
 <html>
 <body style="background-color:powderblue;">
