--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@ use-site-title: true
 css: '/css/main.css'
 ---
 
-<p style="font-size:60px"; text-align: "center">I'm Murugesh.</p>
-<br>
-<br>
-I am a self-motivated and self-taught continuous learner with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.*
-<br>
-<br>
-<b>Don't believe me. Just watch!</b> 
-<br>
-<br>
-<p style="font-size:60px; color:red; text-align: center">Don't believe me. Just watch!</p>
-
 <html>
-<body style="background-color:powderblue;">
+<body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
+<h1 style="font-size:60px; text-align: center">I'm Murugesh.</h1><br>
+<p>
+I am a self-motivated and self-taught continuous learner with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.
+</p><br>
+<p style="font-size:60px; color:red; text-align: center">Don't believe me. Just watch!</p>
 </body>
 </html>
