--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Hello!
+# title: Hello!
 show-avatar: true
-subtitle: Data Scientist Intern @ bitsCrunch
+subtitle: Welcome all!
 cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
@@ -12,9 +12,10 @@ css: '/css/main.css'
 <body>
 
 <h1 style="font-size:60px; text-align: center">I'm Murugesh.</h1><br>
+<h1 style="font-size:60px; text-align: center">Data Scientist Intern @ bitsCrunch</h1>
 <p>
 I am a self-motivated and self-taught continuous learner with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.
 </p><br>
-<p style="font-size:60px; color:red; text-align: center">Don't believe me. Just watch!</p>
+<p style="font-size:45px; color:red; text-align: center">Don't believe me. Just watch!</p>
 </body>
 </html>
