--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ css: '/css/main.css'
 <h1 style="font-size:60px; text-align: center">I'm Murugesh.</h1><br>
 <h3 style="font-size:30px; text-align: center">Data Science Intern @ bitsCrunch</h3>
 
-<p style="font-size:15px; color:red; text-align: center">  
+<p style="font-size:15px; color: #ff7373; text-align: center">  
 I am a self-motivated and self-taught Data Scientist with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.
 </p><br>
 
