--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
   <li>Speech Recognition</li>
   <li>Speech Synthesis</li>
   <li>Generative Adversarial Networks</li>
-  <li>Self-driving cars</li>
+  <li>All Terrain Vehicles</li>
+  <li>Autonomous Systems</li>
 </ul><br>
   
 <h3 style="font-size:30px; text-align: left">Key Competencies:</h3><br>
 <ul>
   <li>Team Management</li>
+  <li>Leadership</li>
   <li>Digital Transformation</li>
   <li>Strategic Planning and Decision Making</li>
   <li>Communication</li>
