--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 # title: Hello!
 show-avatar: true
 subtitle: Welcome to my World!
-cover-img: '/assets/img/cover/home.jpg'
+# cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
 ---
