--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@ css: '/css/main.css'
 <html>
 <body>
 
-<h1 style="font-size:60px; text-align: center">I'm Murugesh</h1><br>
+<h1 style="font-size:60px; text-align: center">Hi! I'm Murugesh</h1><br>
 
 <p style="font-size:18px; text-align: center">  
 I am a self-motivated and self-taught Data Scientist with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.
 </p><br>
 
-<h3 style="font-size:30px; text-align: left">Key Technologies:</h3><br>
+<h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
+  <li>Data Visualization</li>
+  <li>Marketing Analytics</li>
+  <li>Database Management</li>
   <li>Natural Language Processing</li>
   <li>Computer Vision</li>
   <li>Natural Language Understanding</li>
@@ -41,6 +44,5 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
   <li>Communication</li>
 </ul><br>
 
-<p style="font-size:45px; color:#ff7373; text-align: center">Don't believe me. Just watch!</p>
 </body>
 </html>
