--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
   <li>Autonomous Systems</li>
 </ul><br>
   
+<h3 style="font-size:30px; text-align: left">Coding Skills:</h3><br>
+<ul>
+  <li>Programming Languages</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Python, R, C, Matlab</li>
+  </ul>
+  </li>
+  <li>Leadership</li>
+  <li>Digital Transformation</li>
+  <li>Strategic Planning and Decision Making</li>
+  <li>Communication</li>
+</ul><br>
+  
 <h3 style="font-size:30px; text-align: left">Key Competencies:</h3><br>
 <ul>
   <li>Team Management</li>
@@ -42,6 +56,13 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
   <li>Digital Transformation</li>
   <li>Strategic Planning and Decision Making</li>
   <li>Communication</li>
+</ul><br>
+  
+<h3 style="font-size:30px; text-align: left">Languages Known:</h3><br>
+<ul>
+  <li>தமிழ்</li>
+  <li>English</li>
+  <li>Français</li>
 </ul><br>
 
 </body>
