--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
 <h3 style="font-size:30px; text-align: left">Coding Skills:</h3><br>
 <ul>
   <li>Programming Languages</li>
-  <li style="list-style-type:none">
+  <li Programming Languages style="list-style-type:none">
   <ul>
     <li>Python, R, C, Matlab</li>
   </ul>
