--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
     <li>Python, R, C, Matlab</li>
   </ul>
   </li>
+  <li>Platforms</li>
+  <li Programming Languages style="list-style-type:none">
+  <ul>
+    <li>Python, R, C, Matlab</li>
+  </ul>
+  </li>
+  <li>Deep Learning Frameworks</li>
+  <li Programming Languages style="list-style-type:none">
+  <ul>
+    <li>Python, R, C, Matlab</li>
+  </ul>
+  </li>
   <li>Leadership</li>
   <li>Digital Transformation</li>
   <li>Strategic Planning and Decision Making</li>
