--- a/index.html
+++ b/index.html
@@ -38,27 +38,59 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
 <h3 style="font-size:30px; text-align: left">Coding Skills:</h3><br>
 <ul>
   <li>Programming Languages</li>
-  <li Programming Languages style="list-style-type:none">
+  <li style="list-style-type:none">
   <ul>
     <li>Python, R, C, Matlab</li>
   </ul>
   </li>
   <li>Platforms</li>
-  <li Programming Languages style="list-style-type:none">
+  <li style="list-style-type:none">
   <ul>
-    <li>Python, R, C, Matlab</li>
+    <li>Linux Mint, Ubuntu, Windows 7, Windows 8.1, Windows 10</li>
   </ul>
   </li>
   <li>Deep Learning Frameworks</li>
-  <li Programming Languages style="list-style-type:none">
+  <li style="list-style-type:none">
   <ul>
-    <li>Python, R, C, Matlab</li>
+    <li>Pytorch, Tensorflow 1, Tensorflow 2.0, Keras</li>
   </ul>
   </li>
-  <li>Leadership</li>
-  <li>Digital Transformation</li>
-  <li>Strategic Planning and Decision Making</li>
-  <li>Communication</li>
+  <li>Web Deployment Frameworks</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Flask, Rshiny, Dash, Streamlit</li>
+  </ul>
+  </li>
+  <li>Data Vizualization</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Tableau Desktop, MS Excel, Matplotlib, seaborn, plotly, ggplot2</li>
+  </ul>
+  </li>
+  <li>Version Control</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Github, Bitbucket</li>
+  </ul>
+  </li>
+  <li>Content Management System</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Docker</li>
+  </ul>
+  </li>
+  <li>Cloud Technologies</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>GCP, Pivotal web services, Heroku</li>
+  </ul>
+  </li>
+  <li>Database Management Systems</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>MySQL, PostgreSQL</li>
+  </ul>
+  </li>
 </ul><br>
   
 <h3 style="font-size:30px; text-align: left">Key Competencies:</h3><br>
