--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
 </p><br>
   
 <a href="https://murugeshmanthiramoorthi.github.io/projects/#musee-d-orsay-and-musee-de-l-orangerie-data-vizualization-challenge">
-<img src="/assets/img/musee.jpg" alt="Italian Trulli" width="500" height="600">
+<img src="/assets/img/musee.jpg" alt="Musee_dorsay" width="300" height="300">
 </a>
 
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
