--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ css: '/css/main.css'
 I am a self-motivated and self-taught Data Scientist with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.
 </p><br>
   
-<a href="https://murugeshmanthiramoorthi.github.io/projects/#musee-d-orsay-and-musee-de-l-orangerie-data-vizualization-challenge">
+<! <a href="https://murugeshmanthiramoorthi.github.io/projects/#musee-d-orsay-and-musee-de-l-orangerie-data-vizualization-challenge">
 <img src="/assets/img/musee.jpg" alt="Musee_dorsay" width="300" height="300">
-</a>
+</a> >
 
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
