--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
 
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
+  <li>Digital Transformation</li>
+  <li>Data-driven business understanding</li>
   <li>Data Visualization</li>
   <li>Marketing Analytics</li>
   <li>Database Management</li>
+  <li>Machine Learning</li>
+  <li>Deep Learning</li>
   <li>Natural Language Processing</li>
+  <li>Digital Innovation</li>
   <li>Computer Vision</li>
   <li>Natural Language Understanding</li>
   <li>Model Deployment</li>
@@ -35,8 +40,9 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
   <li>Speech Recognition</li>
   <li>Speech Synthesis</li>
   <li>Generative Adversarial Networks</li>
-  <li>All Terrain Vehicles</li>
-  <li>Autonomous Systems</li>
+  <li>Data-driven Decision Making</li>
+  <li>Leadership</li>
+  <li>Team Management</li>
 </ul><br>
   
 <h3 style="font-size:30px; text-align: left">Coding Skills:</h3><br>
@@ -47,7 +53,13 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
     <li>Python, R, C, Matlab</li>
   </ul>
   </li>
-  <li>Platforms</li>
+    <li>Low-code Machine Learning PLatform</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Dataiku DSS, SAS Viya</li>
+  </ul>
+  </li>
+  <li>Operating Platforms</li>
   <li style="list-style-type:none">
   <ul>
     <li>Linux Mint, Ubuntu, Windows 7, Windows 8.1, Windows 10</li>
@@ -95,20 +107,16 @@ I am a self-motivated and self-taught Data Scientist with proven leadership skil
     <li>MySQL, PostgreSQL</li>
   </ul>
   </li>
-</ul><br>
-  
-<h3 style="font-size:30px; text-align: left">Key Competencies:</h3><br>
-<ul>
-  <li>Team Management</li>
-  <li>Leadership</li>
-  <li>Digital Transformation</li>
-  <li>Strategic Planning and Decision Making</li>
-  <li>Communication</li>
+  <li>Low-code Application Development</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>SAP Build</li>
+  </ul>
+  </li>
 </ul><br>
   
 <h3 style="font-size:30px; text-align: left">Languages Known:</h3><br>
 <ul>
-  <li>தமிழ்</li>
   <li>English</li>
   <li>Français</li>
 </ul><br>
