--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ css: '/css/main.css'
 <h1 style="font-size:60px; text-align: center">Hi! I'm Murugesh</h1><br>
 
 <p style="font-size:18px; text-align: justify">  
-I am a self-motivated and self-taught Data Scientist with proven leadership skills. I am always in a quest of mastering new skills as I believe "I know nothing". I have evidenced success in both individual tasks and team works. I have been part of numerous teams and I always make sure everyone has an equal contribution. I try my maximum and make sure that I get the tasks assigned to me are completed on time. I believe time is the most valuable thing in the universe as it cannot be brought back(as of now). So I try not to waste that in any way.
+With the world getting filled with digital natives and society becoming more data-driven, an equal ratio of business understanding, programming, and statistics are required. Coming from the core engineering field, starting a career in the IT sector, and completing a master's in a techno-management program, I have developed a hybrid profile to work. With the plethora of Data talents available, I stand out with my versatile nature and a bunch of real-time projects. Over time, I learned that a person's efficiency depends on how effectively he/she manages available time. Keeping this in mind, I always utilize my time productively balanced between personal and professional attires. 
 </p><br>
   
 <!-- <a href="https://murugeshmanthiramoorthi.github.io/projects/#musee-d-orsay-and-musee-de-l-orangerie-data-vizualization-challenge">
