--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@ With the world getting filled with digital natives and society becoming more dat
 
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
+  <li>Artificial Intelligence</li>
+  <li>Business Intelligence</li>
+  <li>Machine Learning</li>
+  <li>Natural Language Processing</li>
   <li>Digital Transformation</li>
-  <li>Data-driven business understanding</li>
-  <li>Data Visualization</li>
+  <li>Data-driven business</li>
   <li>Marketing Analytics</li>
   <li>Database Management</li>
-  <li>Machine Learning</li>
   <li>Deep Learning</li>
-  <li>Natural Language Processing</li>
   <li>Digital Innovation</li>
   <li>Computer Vision</li>
   <li>Natural Language Understanding</li>
@@ -59,10 +60,10 @@ With the world getting filled with digital natives and society becoming more dat
     <li>Dataiku DSS, SAS Viya</li>
   </ul>
   </li>
-  <li>Operating Platforms</li>
+   <li>Big Data Management</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Linux Mint, Ubuntu, Windows 7, Windows 8.1, Windows 10</li>
+    <li>Apache Spark, Hadoop</li>
   </ul>
   </li>
   <li>Deep Learning Frameworks</li>
@@ -77,10 +78,10 @@ With the world getting filled with digital natives and society becoming more dat
     <li>Flask, Rshiny, Dash, Streamlit</li>
   </ul>
   </li>
-  <li>Data Vizualization</li>
+  <li>Data Vizualization and Business Intelligence</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Tableau Desktop, MS Excel, Matplotlib, seaborn, plotly, ggplot2</li>
+    <li>Tableau Desktop, Power BI, MS Excel, Matplotlib, Seaborn, Plotly, ggplot2</li>
   </ul>
   </li>
   <li>Version Control</li>
@@ -98,7 +99,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Cloud Technologies</li>
   <li style="list-style-type:none">
   <ul>
-    <li>GCP, Pivotal web services, Heroku</li>
+    <li>GCP, Azure, Pivotal web services, Heroku</li>
   </ul>
   </li>
   <li>Database Management Systems</li>
@@ -106,6 +107,18 @@ With the world getting filled with digital natives and society becoming more dat
   <ul>
     <li>MySQL, PostgreSQL</li>
   </ul>
+  </li>
+  <li>NoSQL Database Management Systems</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>MongoDB, Neo4j</li>
+  </ul>
+  <li>Operating Platforms</li>
+  <li style="list-style-type:none">
+  <ul>
+    <li>Linux Mint, Ubuntu, Windows 7, Windows 8.1, Windows 10</li>
+  </ul>
+  </li>
   </li>
   <li>Low-code Application Development</li>
   <li style="list-style-type:none">
