--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ With the world getting filled with digital natives and society becoming more dat
 
 <h3 style="font-size:30px; text-align: left">Check out some of my projects here:</h3><br>
 <a href="https://murugeshmanthiramoorthi.github.io/projects/#musee-d-orsay-and-musee-de-l-orangerie-data-vizualization-challenge">
-<img src="/assets/img/musee.jpg" alt="Musee_dorsay" width="300" height="300">
+<img src="/assets/img/musee.jpg" alt="Musee_dorsay" width="300" height="300" class="center">
 </a>
+<br>
 
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
