--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@ With the world getting filled with digital natives and society becoming more dat
   <li>English</li>
   <li>Français</li>
 </ul><br>
+  
+<h3 style="font-size:30px; text-align: left">Check out my accomplishments here:</h3><br>
+<a href="https://murugeshmanthiramoorthi.github.io/accomplishments/">
+<img src="/assets/img/accomplishments.jpg" alt="Accomplishments" width="300" height="300" class="center">
+</a>
+<br>
 
 </body>
 </html>
