--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Programming Languages</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Python, R, C, Matlab</li>
+    <li>Python, R, C, Matlab, JavaScript, Solidity</li>
   </ul>
   </li>
     <li>Low-code Machine Learning PLatform</li>
