--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ With the world getting filled with digital natives and society becoming more dat
     <li>Python, R, C, Matlab, JavaScript, Solidity</li>
   </ul>
   </li>
-    <li>Low-code Machine Learning PLatform</li>
+    <li>Low-code Machine Learning Platform</li>
   <li style="list-style-type:none">
   <ul>
     <li>Dataiku DSS, SAS Viya</li>
@@ -71,7 +71,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Deep Learning Frameworks</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Pytorch, Tensorflow 1, Tensorflow 2.0, Keras</li>
+    <li>Pytorch, Tensorflow, Keras</li>
   </ul>
   </li>
   <li>Web Deployment Frameworks</li>
@@ -92,22 +92,22 @@ With the world getting filled with digital natives and society becoming more dat
     <li>Github, Bitbucket</li>
   </ul>
   </li>
-  <li>Content Management System</li>
+  <li>Container Management System</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Docker</li>
+    <li>Docker, Kubernetes</li>
   </ul>
   </li>
   <li>Cloud Technologies</li>
   <li style="list-style-type:none">
   <ul>
-    <li>GCP, Azure, Pivotal web services, Heroku</li>
+    <li>GCP, Azure, AWS, Pivotal web services, Heroku</li>
   </ul>
   </li>
   <li>Database Management Systems</li>
   <li style="list-style-type:none">
   <ul>
-    <li>MySQL, PostgreSQL</li>
+    <li>MySQL, PostgreSQL, SQL Server</li>
   </ul>
   </li>
   <li>NoSQL Database Management Systems</li>
