--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Français</li>
 </ul><br>
   
+<h3 style="font-size:30px; text-align: left">Check out my blogs here:</h3><br>
+<ul>
+  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d"><b>bold text</b></a></li>
+  <li><b>bold text.</b></li>
+  <li>Français</li>
+</ul><br>
+  
 <h3 style="font-size:30px; text-align: left">Check out my accomplishments here:</h3><br>
 <a href="https://murugeshmanthiramoorthi.github.io/accomplishments/">
 <img src="/assets/img/accomplishments.jpg" alt="Accomplishments" width="300" height="300" class="center">
