--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ With the world getting filled with digital natives and society becoming more dat
   
 <h3 style="font-size:30px; text-align: left">Check out my blogs here:</h3><br>
 <ul>
-  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d"><b>bold text</b></a></li>
+  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d"><font size="18">This is really tiny text.</font></a></li>
   <li><b>bold text.</b></li>
   <li>Français</li>
 </ul><br>
