--- a/index.html
+++ b/index.html
@@ -138,9 +138,12 @@ With the world getting filled with digital natives and society becoming more dat
   
 <h3 style="font-size:30px; text-align: left">Check out my blogs here:</h3><br>
 <ul>
-  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d"><font size="18">This is really tiny text.</font></a></li>
-  <li><b>bold text.</b></li>
-  <li>Français</li>
+  <li><a href="https://medium.com/analytics-vidhya/my-d2m-experience-in-tbs-58282dcbb9aa"><font size="12">My experience of Data Science Masters program in France</font></a></li>
+  <li><a href="https://medium.com/analytics-vidhya/top-5-traps-for-every-new-comer-in-data-science-2d29a7622951"><font size="12">Top 5 traps for every newcomer in Data Science</font></a></li>
+  <li><a href="https://murugeshmanthiramoorthi.medium.com/why-should-you-choose-france-44626ea11561"><font size="12">Why should you choose France?</font></a></li>
+  <li><a href="https://medium.com/analytics-vidhya/how-to-organize-a-python-function-884fba3f51a5"><font size="12">How to organize a python function?</font></a></li>
+  <li><a href=https://murugeshmanthiramoorthi.medium.com/how-to-shift-from-windows-to-linux-748a6f535a0"><font size="12">How to shift from windows to Linux</font></a></li>
+  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d"><font size="12">NLP with Latent Semantic Analysis</font></a></li>
 </ul><br>
   
 <h3 style="font-size:30px; text-align: left">Check out my accomplishments here:</h3><br>
