--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-# title: Hello!
+title: Hello!
 show-avatar: true
 subtitle: Welcome!
-# cover-img: '/assets/img/cover/home.jpg'
+cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
 ---
