--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Hello!
+title: Murugesh MANTHIRAMOORTHI
 show-avatar: true
-subtitle: Welcome!
+subtitle: Remote Sensiing and Satellite Imagery Engineer
 cover-img: '/assets/img/cover/home.jpg'
 use-site-title: true
 css: '/css/main.css'
