--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Murugesh MANTHIRAMOORTHI
 show-avatar: true
 subtitle: Remote Sensiing and Satellite Imagery Engineer
-cover-img: '/assets/img/cover/home.jpg'
+cover-img: '/assets/img/cover/home1.JPG'
 use-site-title: true
 css: '/css/main.css'
 ---
