--- a/index.html
+++ b/index.html
@@ -8,10 +8,69 @@ use-site-title: true
 css: '/css/main.css'
 ---
 
+const carouselText = [
+  {text: "Apple", color: "red"},
+  {text: "Orange", color: "orange"},
+  {text: "Lemon", color: "yellow"}
+]
+
+$( document ).ready(async function() {
+  carousel(carouselText, "#feature-text")
+});
+
+async function typeSentence(sentence, eleRef, delay = 100) {
+  const letters = sentence.split("");
+  let i = 0;
+  while(i < letters.length) {
+    await waitForMs(delay);
+    $(eleRef).append(letters[i]);
+    i++
+  }
+  return;
+}
+
+async function deleteSentence(eleRef) {
+  const sentence = $(eleRef).html();
+  const letters = sentence.split("");
+  let i = 0;
+  while(letters.length > 0) {
+    await waitForMs(100);
+    letters.pop();
+    $(eleRef).html(letters.join(""));
+  }
+}
+
+async function carousel(carouselList, eleRef) {
+    var i = 0;
+    while(true) {
+      updateFontColor(eleRef, carouselList[i].color)
+      await typeSentence(carouselList[i].text, eleRef);
+      await waitForMs(1500);
+      await deleteSentence(eleRef);
+      await waitForMs(500);
+      i++
+      if(i >= carouselList.length) {i = 0;}
+    }
+}
+
+function updateFontColor(eleRef, color) {
+  $(eleRef).css('color', color);
+}
+
+function waitForMs(ms) {
+  return new Promise(resolve => setTimeout(resolve, ms))
+}
+    
 <html>
 <body>
 
-<h1 style="font-size:60px; text-align: center">Hi! I'm Murugesh</h1><br>
+  <div class="typing-container">
+    <span id="sentence" class="sentence">Here, take this </span>
+    <span id="feature-text"></span>
+    <span class="input-cursor"></span>
+  </div>
+  
+<h1 style="font-size:60px; text-align: center">Hi! I'm Murugesh Manthiramoorthi</h1><br>
 
 <p style="font-size:18px; text-align: justify">  
 With the world getting filled with digital natives and society becoming more data-driven, an equal ratio of business understanding, programming, and statistics are required. Coming from the core engineering field, starting a career in the IT sector, and completing a master's in a techno-management program, I have developed a hybrid profile to work. With the plethora of Data talents available, I stand out with my versatile nature and a bunch of real-time projects. Over time, I learned that a person's efficiency depends on how effectively he/she manages available time. Keeping this in mind, I always utilize my time productively balanced between personal and professional attires. 
