--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ With the world getting filled with digital natives and society becoming more dat
 
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
+  <li>Geospatial Analysis</li>
+  <li>Satellite Imagery</li>
   <li>Artificial Intelligence</li>
   <li>Business Intelligence</li>
   <li>Machine Learning</li>
@@ -47,7 +49,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Programming Languages</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Python, R, C, Matlab, JavaScript, Solidity</li>
+    <li>Python, R, , Julia, C, Matlab, JavaScript, Solidity</li>
   </ul>
   </li>
     <li>Low-code Machine Learning Platform</li>
@@ -77,7 +79,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Data Vizualization and Business Intelligence</li>
   <li style="list-style-type:none">
   <ul>
-    <li>Tableau Desktop, Power BI, MS Excel, Matplotlib, Seaborn, Plotly, ggplot2</li>
+    <li>Tableau Desktop, Power BI, MS Excel</li>
   </ul>
   </li>
   <li>Version Control</li>
@@ -131,6 +133,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li><a href="https://murugeshmanthiramoorthi.medium.com/why-should-you-choose-france-44626ea11561">Why should you choose France?</a></li>
   <li><a href="https://medium.com/analytics-vidhya/how-to-organize-a-python-function-884fba3f51a5">How to organize a python function?</a></li>
   <li><a href="https://murugeshmanthiramoorthi.medium.com/how-to-shift-from-windows-to-linux-748a6f535a0">How to shift from windows to Linux</a></li>
+  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d">NLP with Latent Semantic Analysis</a></li>
   <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d">NLP with Latent Semantic Analysis</a></li>
 </ul><br>
   
