--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@ With the world getting filled with digital natives and society becoming more dat
   <li><a href="https://medium.com/analytics-vidhya/how-to-organize-a-python-function-884fba3f51a5">How to organize a python function?</a></li>
   <li><a href="https://murugeshmanthiramoorthi.medium.com/how-to-shift-from-windows-to-linux-748a6f535a0">How to shift from windows to Linux</a></li>
   <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d">NLP with Latent Semantic Analysis</a></li>
-  <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d">NLP with Latent Semantic Analysis</a></li>
+  <li><a href="https://blog.openmined.org/research-presentations-25-july-2020-talk-summary/">SUMMARIZING OPENMINED RESEARCH PRESENTATIONS: 25 JULY 2020</a></li>
+  <li><a href="https://iq.opengenus.org/neural-networks-with-deep-visualization/">Understanding Neural Networks Through Deep Visualization by Jason Yosinski</a></li>
+  <li><a href="https://iq.opengenus.org/explaining-and-harnessing-adversarial-examples/">Explaining and Harnessing Adversarial examples by Ian Goodfellow</a></li>
+  <li><a href="https://iq.opengenus.org/one-pixel-attack-for-fooling-deep-neural-networks/">One Pixel Attack for Fooling Deep Neural Networks</a></li>
+  <li><a href="https://iq.opengenus.org/deep-neural-networks-are-easily-fooled/">Deep Neural Networks are Easily Fooled: High Confidence Predictions for Unrecognizable Images</a></li>
+  <li><a href="https://iq.opengenus.org/intriguing-properties-neural-network/">Simplifying "Intriguing properties of neural networks"</a></li>
+  <li><a href="https://iq.opengenus.org/gaussian-lda-for-topic-models/">Simplifying "Gaussian LDA for Topic Models with Word Embeddings"</a></li>
+  <li><a href="https://iq.opengenus.org/pachinko-allocation-model/">Pachinko Allocation Model (PAM)</a></li>
+  <li><a href="https://iq.opengenus.org/topic-modeling-nmf/">Topic Modeling using Non Negative Matrix Factorization (NMF)</a></li>
+  <li><a href="https://iq.opengenus.org/topic-modelling-techniques/">Topic Modelling Techniques in NLP</a></li>
+  <li><a href="https://iq.opengenus.org/voting-classifier/">Demystifying Voting Classifier</a></li>
 </ul><br>
   
 <h3 style="font-size:30px; text-align: left">Check out my accomplishments here:</h3><br>
