--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li>Cloud Technologies</li>
   <li style="list-style-type:none">
   <ul>
-    <li>GCP, Azure, AWS, Pivotal web services, Heroku</li>
+    <li>GCP, Digital Ocean, Heroku</li>
   </ul>
   </li>
   <li>Database Management Systems</li>
@@ -134,7 +134,7 @@ With the world getting filled with digital natives and society becoming more dat
   <li><a href="https://medium.com/analytics-vidhya/how-to-organize-a-python-function-884fba3f51a5">How to organize a python function?</a></li>
   <li><a href="https://murugeshmanthiramoorthi.medium.com/how-to-shift-from-windows-to-linux-748a6f535a0">How to shift from windows to Linux</a></li>
   <li><a href="https://medium.com/analytics-vidhya/nlp-with-latent-semantic-analysis-b3de6e16ad7d">NLP with Latent Semantic Analysis</a></li>
-  <li><a href="https://blog.openmined.org/research-presentations-25-july-2020-talk-summary/">SUMMARIZING OPENMINED RESEARCH PRESENTATIONS: 25 JULY 2020</a></li>
+  <li><a href="https://blog.openmined.org/research-presentations-25-july-2020-talk-summary/">Summarizing OpenMined Research Presentations: 25 July 2020</a></li>
   <li><a href="https://iq.opengenus.org/neural-networks-with-deep-visualization/">Understanding Neural Networks Through Deep Visualization by Jason Yosinski</a></li>
   <li><a href="https://iq.opengenus.org/explaining-and-harnessing-adversarial-examples/">Explaining and Harnessing Adversarial examples by Ian Goodfellow</a></li>
   <li><a href="https://iq.opengenus.org/one-pixel-attack-for-fooling-deep-neural-networks/">One Pixel Attack for Fooling Deep Neural Networks</a></li>
