--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ css: '/css/main.css'
 ---
     
 <html>
+<head>
+  <link rel="import" href="/assets/nx.html">
+</head>
 <body>
   
 <h1 style="font-size:60px; text-align: center">Hi! I'm Murugesh Manthiramoorthi</h1><br>
