--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@ css: '/css/main.css'
 ---
     
 <html>
-<head>
-  
-</head>
 <body>
   
 <h1 style="font-size:60px; text-align: center">Welcome / Bienvenue!</h1><br>
-<link rel="import" href="/assets/nx.html">
 <p style="font-size:18px; text-align: justify">  
 With the world getting filled with digital natives and society becoming more data-driven, an equal ratio of business understanding, programming, and statistics are required. Coming from the core engineering field, starting a career in the IT sector, and completing a master's in a techno-management program, I have developed a hybrid profile to work. With the plethora of Data talents available, I stand out with my versatile nature and a bunch of real-time projects. Over time, I learned that a person's efficiency depends on how effectively he/she manages available time. Keeping this in mind, I always utilize my time productively balanced between personal and professional attires. 
 </p><br>
-
+    
+<iframe src="https://public.tableau.com/app/profile/murugesh.manthiramoorthi/viz/Final_presentation_16056473623940/Dashboard1?:showVizHome=no&:embed=true"
+ width="645" height="955"></iframe>
+  
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
   <li>Geospatial Analysis</li>
