--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@ With the world getting filled with digital natives and society becoming more dat
 </p><br>
     
 <iframe src="https://public.tableau.com/app/profile/murugesh.manthiramoorthi/viz/Final_presentation_16056473623940/Dashboard1?:showVizHome=no&:embed=true"
- width="645" height="955"></iframe>
+ width="1200" height="955"></iframe>
+    
+<iframe src="/assets/nx.html"
+ width="600" height="955"></iframe>
   
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
