--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ css: '/css/main.css'
   <meta charset=utf-8 />
   <title></title>
   <style>
-    div.container {
-      display:inline-block;
-    }
+    .imageContainer {
+    float: left;
+}
 
-    p {
-      text-align:center;
-    }
+p {
+    text-align: center;
+}
   </style>
 </head>
 <body>
@@ -168,18 +168,19 @@ With the world getting filled with digital natives and society becoming more dat
 </a>
 <br>
 
-<div class="container">
-    <img src="http://placehold.it/350x150" height="200" width="200" />
-    <p>This is image 1</p>
-  </div>
-  <div class="container">
-    <img class="middle-img" src="http://placehold.it/350x150"/ height="200" width="200" />
-    <p>This is image 2</p>
-  </div>
-  <div class="container">
-    <img src="http://placehold.it/350x150" height="200" width="200" />
-    <p>This is image 3</p>
-  </div>
+<div class="image123">
+    <div class="imageContainer">
+        <img src="https://heros.fandom.com/fr/wiki/Tony_Stark_(MCU)?file=Tony_Stark_Infobox.jpg" height="200" width="200" />
+        <p>This is image 1</p>
+    </div>
+    <div class="imageContainer">
+        <img class="middle-img" src="https://heros.fandom.com/fr/wiki/Tony_Stark_(MCU)?file=Tony_Stark_Infobox.jpg"/ height="200" width="200" />
+        <p>This is image 2</p>
+    </div>
+    <div class="imageContainer">    
+        <img src="/images/tv.gif"/ height="200" width="200"/>
+        <p>This is image 3</p>
+    </div>
 </div>
 
 </body>
