--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@ With the world getting filled with digital natives and society becoming more dat
         <p>This is image 1</p>
     </div>
     <div class="imageContainer">
-        <img class="middle-img" src="https://heros.fandom.com/fr/wiki/Tony_Stark_(MCU)?file=Tony_Stark_Infobox.jpg"/ height="200" width="200" />
-        <p>This is image 2</p>
+        <a href="https://murugeshmanthiramoorthi.github.io/accomplishments/">
+        <img class="middle-img" src="/assets/img/accomplishments.jpg"/ height="200" width="200" />
+        <p>Accomplishments</p>
+        </a>
     </div>
     <div class="imageContainer">    
         <img src="/images/tv.gif"/ height="200" width="200"/>
