--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@ With the world getting filled with digital natives and society becoming more dat
 
 <div class="image123">
     <div class="imageContainer">
-        <img src="https://heros.fandom.com/fr/wiki/Tony_Stark_(MCU)?file=Tony_Stark_Infobox.jpg" height="200" width="200" />
-        <p>This is image 1</p>
+        <a href="https://murugeshmanthiramoorthi.github.io/accomplishments/">
+        <img class="middle-img" src="/assets/img/accomplishments.jpg"/ height="200" width="200" />
+        <p>Accomplishments</p>
+        </a>
     </div>
     <div class="imageContainer">
         <a href="https://murugeshmanthiramoorthi.github.io/accomplishments/">
@@ -179,10 +181,10 @@ With the world getting filled with digital natives and society becoming more dat
         <p>Accomplishments</p>
         </a>
     </div>
-    <div class="imageContainer">    
+<!--     <div class="imageContainer">    
         <img src="/images/tv.gif"/ height="200" width="200"/>
         <p>This is image 3</p>
-    </div>
+    </div> -->
 </div>
 
 </body>
