--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ With the world getting filled with digital natives and society becoming more dat
   
 <h3 style="font-size:30px; text-align: left">Check out my blogs here:</h3><br>
 <ul>
+  <li><a href="https://flockeo.com/une-petite-pause-a-chennai-avec-murugesh/">Une petite pause à Chennai avec Murugesh</a></li>
   <li><a href="https://medium.com/analytics-vidhya/my-d2m-experience-in-tbs-58282dcbb9aa">My experience of Data Science Masters program in France</a></li>
   <li><a href="https://medium.com/analytics-vidhya/top-5-traps-for-every-new-comer-in-data-science-2d29a7622951">Top 5 traps for every newcomer in Data Science</a></li>
   <li><a href="https://murugeshmanthiramoorthi.medium.com/why-should-you-choose-france-44626ea11561">Why should you choose France?</a></li>
@@ -162,7 +163,12 @@ With the world getting filled with digital natives and society becoming more dat
   <li><a href="https://iq.opengenus.org/topic-modelling-techniques/">Topic Modelling Techniques in NLP</a></li>
   <li><a href="https://iq.opengenus.org/voting-classifier/">Demystifying Voting Classifier</a></li>
 </ul><br>
-  
+
+<h3 style="font-size:30px; text-align: left">Listen to my podcasts here:</h3><br>
+<ul>
+  <li><a href="https://www.linkedin.com/feed/update/urn:li:activity:6812400262578241536/">Voyage en Inde | Travel Tto India</a></li>
+</ul><br>
+
 <h3 style="font-size:30px; text-align: left">Check out my accomplishments here:</h3><br>
 
 <div class="image123">
