--- a/index.html
+++ b/index.html
@@ -169,18 +169,18 @@ With the world getting filled with digital natives and society becoming more dat
   <li><a href="https://www.linkedin.com/feed/update/urn:li:activity:6812400262578241536/">Voyage en Inde | Travel Tto India</a></li>
 </ul><br>
 
-<h3 style="font-size:30px; text-align: left">Check out my accomplishments here:</h3><br>
+<h3 style="font-size:30px; text-align: left">Check out my projects and accomplishments here:</h3><br>
 
 <div class="image123">
     <div class="imageContainer">
         <a href="https://murugeshmanthiramoorthi.github.io/projects/">
-        <img src="/assets/img/cover/projects1.jpg"/ height="300" width="300" />
+        <img src="/assets/img/cover/projects1.jpg"/ height="300" width="350" />
         <p>Projects</p>
         </a>
     </div>
     <div class="imageContainer">
         <a href="https://murugeshmanthiramoorthi.github.io/accomplishments/">
-        <img class="middle-img" src="/assets/img/cover/accomplishments.jpg"/ height="300" width="300" />
+        <img class="middle-img" src="/assets/img/cover/accomplishments.jpg"/ height="300" width="350" />
         <p>Accomplishments</p>
         </a>
     </div>
