--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Murugesh MANTHIRAMOORTHI
 show-avatar: true
-subtitle: Remote Sensiing and Satellite Imagery Engineer
+subtitle: Data Scientist / Remote Sensiing and Satellite Imagery Engineer
 cover-img: '/assets/img/cover/home1.JPG'
 use-site-title: true
 css: '/css/main.css'
@@ -166,7 +166,7 @@ With the world getting filled with digital natives and society becoming more dat
 
 <h3 style="font-size:30px; text-align: left">Listen to my podcasts here:</h3><br>
 <ul>
-  <li><a href="https://www.linkedin.com/feed/update/urn:li:activity:6812400262578241536/">Voyage en Inde | Travel Tto India</a></li>
+  <li><a href="https://www.linkedin.com/feed/update/urn:li:activity:6812400262578241536/">Voyage en Inde | Travel to India</a></li>
 </ul><br>
 
 <h3 style="font-size:30px; text-align: left">Check out my projects and accomplishments here:</h3><br>
