--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ With the world getting filled with digital natives and society becoming more dat
     
 <!-- <iframe src="https://public.tableau.com/app/profile/murugesh.manthiramoorthi/viz/Final_presentation_16056473623940/Dashboard1?:showVizHome=no&:embed=true"
  width="1200" height="955"></iframe> -->
-<lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_1TcivY.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
-
+<lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_1TcivY.json"  background="transparent"  speed="1"  style="width: 600px; height: 300px;"  loop  autoplay></lottie-player>
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
 <ul>
   <li>Geospatial Analysis</li>
