--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ margin-left:50px;}
 #typing {
 
             width: 0ch;
-            color: white;
+            color: black;
             float: left;
             font-family: sans-serif;
             font-weight:bold;
-            font-size: 60px;
+            font-size: 20px;
             overflow: hidden;
             white-space: nowrap;
             animation: typing 5s steps(22) 1s infinite alternate;
@@ -46,7 +46,7 @@ margin-left:50px;}
       color: white;
             font-family: consolas;
             font-weight:bold;
-            font-size: 60px;
+            font-size: 20px;
             animation: crow 0.5s linear 0s infinite;
         }
         @keyframes typing {
@@ -84,6 +84,7 @@ With the world getting filled with digital natives and society becoming more dat
     
 <div id="typing">I AM A <span>Data Scientist at Murmuration - FlockEO.com</span></div>
 <div id="crow">|</div><br>
+<br>
 <!-- <iframe src="https://public.tableau.com/app/profile/murugesh.manthiramoorthi/viz/Final_presentation_16056473623940/Dashboard1?:showVizHome=no&:embed=true"
  width="1200" height="955"></iframe> -->
 <h3 style="font-size:30px; text-align: left">Key Skills:</h3><br>
