--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ With the world getting filled with digital natives and society becoming more dat
     <span class="input-cursor"></span>
 </div>
     
-<div id="typing">I AM A <span>Data Scientist at Murmuration - FlockEO.com</span></div>
+<div id="typing">I am a <span>Data Scientist at Murmuration - FlockEO.com</span></div>
 <div id="crow">|</div><br>
 <br>
 <!-- <iframe src="https://public.tableau.com/app/profile/murugesh.manthiramoorthi/viz/Final_presentation_16056473623940/Dashboard1?:showVizHome=no&:embed=true"
