--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ document.addEventListener("DOMContentLoaded", function() { // On DOM Load initia
 }
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #000;
+  background-color: #fff;
   color: #eee;
 }
 .container {
@@ -179,7 +179,7 @@ With the world getting filled with digital natives and society becoming more dat
 <br>
     
 <div class="container">
-    <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+    <p>I am a <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
 </div>
 <!-- <iframe src="https://public.tableau.com/app/profile/murugesh.manthiramoorthi/viz/Final_presentation_16056473623940/Dashboard1?:showVizHome=no&:embed=true"
  width="1200" height="955"></iframe> -->
