--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Murugesh MANTHIRAMOORTHI
+<!-- title: Murugesh MANTHIRAMOORTHI -->
 show-avatar: true
 subtitle: Data Scientist / Remote Sensiing and Satellite Imagery Engineer
-cover-img: '/assets/img/cover/home1.JPG'
+<!-- cover-img: '/assets/img/cover/home1.JPG' -->
 use-site-title: true
 css: '/css/main.css'
 ---
