--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p {
 </head>
 <body>
   
-<lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_1TcivY.json"  background="transparent"  speed="1"  style="width: 800px; height: 500px;"  loop  autoplay></lottie-player>
+<!-- <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_1TcivY.json"  background="transparent"  speed="1"  style="width: 800px; height: 500px;"  loop  autoplay></lottie-player> -->
 <p style="font-size:18px; text-align: justify">  
 With the world getting filled with digital natives and society becoming more data-driven, an equal ratio of business understanding, programming, and statistics are required. Coming from the core engineering field, starting a career in the IT sector, and completing a master's in a techno-management program, I have developed a hybrid profile to work. With the plethora of Data talents available, I stand out with my versatile nature and a bunch of real-time projects. Over time, I learned that a person's efficiency depends on how effectively he/she manages available time. Keeping this in mind, I always utilize my time productively balanced between personal and professional attires. 
 </p><br>
